[project]
name = "plox"
version = "0.1.0"
description = "A python port of the Lox language from Crafting Interpreters"
authors = [
    { name = "wiresong", email = "wiresong@wiresong.me" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"plox" = "plox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/plox"]
